--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({ duration: 600, easing: 'ease-out-back', mirror: true });
   </script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
