--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Save The Date</title>
+  <title>Hưng Hà | Save The Date</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <meta property="og:image" content="/compressor/2T9A6556.jpg">
   <meta property="og:image:url" content="/compressor/2T9A6556.jpg">
