--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hưng Hà | Save The Date</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <meta property="og:image" content="/compressor/2T9A6556.jpg">
-  <meta property="og:image:url" content="/compressor/2T9A6556.jpg">
-  <meta property="og:image:secure_url" content="/compressor/2T9A6556.jpg">
-  <meta property="twitter:image:src" content="/compressor/2T9A6556.jpg">
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="500" />
+  <meta property="og:image" content="/2T9A6556.jpg">
+  <meta property="og:image:url" content="/2T9A6556.jpg">
+  <meta property="og:image:secure_url" content="/2T9A6556.jpg">
+  <meta property="twitter:image:src" content="/2T9A6556.jpg">
   <meta property="og:description"
     content="Thật vui vì được gặp và đón tiếp các bạn trong một dịp đặc biệt như đám cưới của chúng tôi. Chúng tôi muốn gửi đến bạn những lời cảm ơn sâu sắc nhất và để bạn biết chúng tôi rất hạnh phúc khi thấy bạn ở đó.">
   <meta name="description"
